Update ExecStop command for gdrive service

--- a/configs/mnt-gdrive.service
+++ b/configs/mnt-gdrive.service
@@ -10,7 +10,8 @@ RestartSec=5
 User=
 Group=
 ExecStart=/usr/bin/rclone mount gdrive: /mnt/gdrive --vfs-cache-mode full
-ExecStop=/usr/bin/fuser -Mk -SIGTERM -m "/mnt/gdrive"
+ExecStop=/bin/fusermount -zu /mnt/gdrive
+TimeoutStopSec=30
 
 [Install]
 WantedBy=multi-user.target
