Update ExecStop command in mnt-gdrive-crypt.service

--- a/configs/mnt-gdrive-crypt.service
+++ b/configs/mnt-gdrive-crypt.service
@@ -13,7 +13,8 @@ ExecStart=/usr/bin/rclone mount vault: /mnt/vault \
   --vfs-cache-mode full \
   --dir-perms 700 \
   --file-perms 600
-ExecStop=/usr/bin/fuser -Mk -SIGTERM -m "/mnt/vault"
+ExecStop=/bin/fusermount -zu /mnt/vault
+TimeoutStopSec=30
 
 [Install]
 WantedBy=multi-user.target
